--- a/public/app/Components/1_topbar/topbar.comp.html
+++ b/public/app/Components/1_topbar/topbar.comp.html
@@ -3,6 +3,5 @@
     <a routerLink = "/delivery/all" routerLinkActive="active">배달음식</a>
     <a>학식메뉴</a>
   </nav>
-
-  <img src="/app/Images/Interface/0_topbar_logo.png">
+  <img src="/app/Images/Interface/0_topbar_logo.png" (click)="goHome()">
 </div>
