--- a/public/app/Styles/2_delivery.css
+++ b/public/app/Styles/2_delivery.css
@@ -1,3 +1,28 @@
+a {
+  cursor: pointer;
+  text-decoration: none; }
 
+._pos_rel {
+  position: relative; }
+
+._float_con > * {
+  float: left; }
+._float_con:after {
+  clear: both; }
+
+#sub_menu_bar {
+  width: 100%;
+  height: 44px;
+  background-color: #707070; }
+
+#vertical_scroll_area {
+  overflow-y: scroll; }
+
+.delivery_item {
+  padding: 0px 16px 0px 16px;
+  height: 52px;
+  border-bottom: 1px solid #EAEAEA; }
+  .delivery_item > span {
+    line-height: 54px; }
 
 /*# sourceMappingURL=2_delivery.css.map */
