--- a/public/app/Styles/common.scss
+++ b/public/app/Styles/common.scss
@@ -1,4 +1,6 @@
 $sikija_color: tomato;
+$light_line_color: #EAEAEA;
+$sub_menu_bar_bg: #707070;
 
 a {
   cursor: pointer;
@@ -16,4 +18,14 @@ a {
   &:after {
     clear: both;
   }
+}
+
+#sub_menu_bar {
+  width: 100%;
+  height: 44px;
+  background-color: $sub_menu_bar_bg;
+}
+
+#vertical_scroll_area {
+  overflow-y: scroll;
 }
