--- a/public/app/Components/2_delivery/delivery.comp.html
+++ b/public/app/Components/2_delivery/delivery.comp.html
@@ -1,4 +1,12 @@
-<div id="sub_menu_bar"></div>
+<div id="sub_menu_bar">
+  <div id="all" (click)="selectCategory('all')">전체</div>
+  <div id="chicken" (click)="selectCategory('chicken')">치킨</div>
+  <div id="korean" (click)="selectCategory('korean')">한식</div>
+  <div id="chinese" (click)="selectCategory('chinese')">중식</div>
+  <div id="snack" (click)="selectCategory('snack')">분식</div>
+  <div id="pork" (click)="selectCategory('pork')">돈육</div>
+
+</div>
 <div id="vertical_scroll_area">
   <div class="delivery_item" *ngFor="let delivery of deliveries" [class.selected]="delivery === selectedDelivery">
     <span>{{delivery.name}}</span>
