--- a/public/app/Styles/2_delivery.css
+++ b/public/app/Styles/2_delivery.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box; }
+
 a {
   cursor: pointer;
   text-decoration: none; }
@@ -24,5 +27,18 @@ a {
   border-bottom: 1px solid #EAEAEA; }
   .delivery_item > span {
     line-height: 54px; }
+
+#sub_menu_bar {
+  padding-left: 8px; }
+  #sub_menu_bar:after {
+    clear: both; }
+  #sub_menu_bar > div {
+    float: left;
+    color: white;
+    height: 100%;
+    line-height: 46px;
+    margin: 0px 10px 0px 10px; }
+  #sub_menu_bar > div.selected {
+    border-bottom: 4px solid tomato; }
 
 /*# sourceMappingURL=2_delivery.css.map */
