--- a/public/app/Components/_top_bar/top_bar.comp.html
+++ b/public/app/Components/_top_bar/top_bar.comp.html
@@ -1,5 +1,6 @@
 <div id="top_bar" class="_pos_rel">
   <nav>
+    <a *ngIf="menu_set == 'select_location'">장소를 선택하세요.</a>
     <a *ngIf="menu_set == 'dashboard'"
        routerLink="/delivery/all" routerLinkActive="active">배달음식</a>
     <a *ngIf="menu_set == 'dashboard'">학식메뉴</a>
