--- a/public/app/Components/1_location/location.comp.html
+++ b/public/app/Components/1_location/location.comp.html
@@ -1,3 +1,6 @@
 <topBar [menu_set]="top_bar_menu_set"></topBar>
 <div id="scroll_area" class="vertical">
+  <div class="location_item" *ngFor="let location of locations" (click)="selectLocation(location.id)">
+    <span>{{location.name}}</span>
+  </div>
 </div>
