--- a/public/app/Styles/1_location.css
+++ b/public/app/Styles/1_location.css
@@ -31,38 +31,13 @@ a {
   height: 52px;
   background-color: tomato; }
 
-.delivery_item {
+.location_item {
   padding: 0px 16px 0px 16px;
   height: 52px;
   border-bottom: 1px solid #EAEAEA; }
-  .delivery_item:active {
+  .location_item:active {
     background-color: #efefef; }
-  .delivery_item > span {
+  .location_item > span {
     line-height: 54px; }
 
-#sub_menu_bar {
-  padding-left: 8px; }
-  #sub_menu_bar:after {
-    clear: both; }
-  #sub_menu_bar > div {
-    float: left;
-    color: white;
-    height: 100%;
-    line-height: 46px;
-    margin: 0px 10px 0px 10px; }
-  #sub_menu_bar > div.selected {
-    border-bottom: 6px solid tomato; }
-
-#call_btn {
-  width: 100%;
-  height: 52px;
-  line-height: 54px;
-  color: white;
-  text-align: center;
-  font-size: 1.2em; }
-
-#leaflet {
-  width: 100%;
-  height: 100%; }
-
-/*# sourceMappingURL=3_delivery.css.map */
+/*# sourceMappingURL=1_location.css.map */
