--- a/public/app/Styles/3_delivery.scss
+++ b/public/app/Styles/3_delivery.scss
@@ -4,6 +4,9 @@
   padding: 0px 16px 0px 16px;
   height: 52px;
   border-bottom: 1px solid $light_line_color;
+  &:active {
+    background-color: #efefef;
+  }
   & > span {
     line-height: 54px;
   }
