--- a/public/app/Components/3_delivery/delivery.comp.html
+++ b/public/app/Components/3_delivery/delivery.comp.html
@@ -1,4 +1,4 @@
-<topBar [menu_set]="top_bar_menu_set"></topBar>
+<topBar [locationId]="locationId" [menu_set]="top_bar_menu_set"></topBar>
 <div id="sub_menu_bar">
   <div id="all" (click)="selectCategory('all')">전체</div>
   <div id="chicken" (click)="selectCategory('chicken')">치킨</div>
