--- a/public/app/Styles/3_delivery.scss
+++ b/public/app/Styles/3_delivery.scss
@@ -12,6 +12,13 @@
   }
 }
 
+#loading_more {
+  color: $sikija_color;
+  background-color: white;
+  text-align: center;
+  padding: 20px;
+}
+
 #sub_menu_bar {
   padding-left: 8px;
   &:after {
