--- a/public/app/Styles/1_location.css
+++ b/public/app/Styles/1_location.css
@@ -13,6 +13,9 @@ a {
 ._float_con:after {
   clear: both; }
 
+._light_gray_bg {
+  background-color: #eaeaea; }
+
 #sub_menu_bar {
   width: 100%;
   height: 44px;
