--- a/public/app/Styles/2_dashboard.css
+++ b/public/app/Styles/2_dashboard.css
@@ -1,3 +1,37 @@
+* {
+  box-sizing: border-box; }
 
+a {
+  cursor: pointer;
+  text-decoration: none; }
+
+._pos_rel {
+  position: relative; }
+
+._float_con > * {
+  float: left; }
+._float_con:after {
+  clear: both; }
+
+._light_gray_bg {
+  background-color: #eaeaea; }
+
+#sub_menu_bar {
+  width: 100%;
+  height: 44px;
+  background-color: #707070; }
+
+#scroll_area {
+  overflow: hidden; }
+  #scroll_area.vertical {
+    overflow-y: scroll; }
+  #scroll_area.horizontal {
+    overflow-x: scroll; }
+  #scroll_area.both {
+    overflow: scroll; }
+
+#bottom_bar {
+  height: 52px;
+  background-color: tomato; }
 
 /*# sourceMappingURL=2_dashboard.css.map */
