--- a/public/app/Styles/3_delivery.css
+++ b/public/app/Styles/3_delivery.css
@@ -13,6 +13,9 @@ a {
 ._float_con:after {
   clear: both; }
 
+._light_gray_bg {
+  background-color: #eaeaea; }
+
 #sub_menu_bar {
   width: 100%;
   height: 44px;
@@ -39,6 +42,12 @@ a {
     background-color: #efefef; }
   .delivery_item > span {
     line-height: 54px; }
+
+#loading_more {
+  color: tomato;
+  background-color: white;
+  text-align: center;
+  padding: 20px; }
 
 #sub_menu_bar {
   padding-left: 8px; }
