working on dashboard

--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -1,3 +1,25 @@
 <topBar [locationId]="locationId" [menu_set]="top_bar_menu_set" [locationObj]="locationObj"></topBar>
 <div id="scroll_area" class="vertical _light_gray_bg">
+  <div id="scroll_height">
+
+    <div id="delivery_or_restaurant" class="_float_con">
+      <div id="to_delivery">
+        <div>
+          <img src="app/Images/Interface/to_delivery.png">
+          <h1>시키자!</h1>
+          <span>배달음식</span>
+        </div>
+      </div>
+      <div id="to_restaurant">
+        <div>
+          <img src="app/Images/Interface/to_restaurant.png">
+          <h1>나가자!</h1>
+          <span>맛집탐방</span>
+        </div>
+      </div>
+    </div>
+
+    <div id="to_inform"></div>
+
+  </div>
 </div>
