--- a/public/app/Styles/common.scss
+++ b/public/app/Styles/common.scss
@@ -1,7 +1,8 @@
 $sikija_color: tomato;
 $light_line_color: #EAEAEA;
 $sub_menu_bar_bg: #707070;
-$light_gray_bg: #eaeaea;
+$light_gray_bg: #efefef;
+$light_gray_bg_border: #eaeaea;
 
 * {
   box-sizing: border-box;
@@ -17,6 +18,7 @@ a {
 }
 
 ._float_con {
+  overflow: hidden;
   & > * {
     float: left;
   }
