working on dashboard

--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -3,7 +3,7 @@
   <div id="scroll_height">
 
     <div id="delivery_or_restaurant" class="_float_con">
-      <div id="to_delivery">
+      <div id="to_delivery" (click)="toDelivery()">
         <div>
           <img src="app/Images/Interface/to_delivery.png">
           <h1>시키자!</h1>
