working on dictionary

--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -1,4 +1,4 @@
-<topBar [locationId]="locationId" [menu_set]="top_bar_menu_set" [locationObj]="locationObj"></topBar>
+<topBar [locationId]="locationId" [menu_set]="top_bar_menu_set" [locationObj]="locationObj" [regionName]="regionName"></topBar>
 <div id="scroll_area" class="vertical _light_gray_bg">
   <div id="scroll_height">
 
