--- a/public/app/Components/_top_bar/top_bar.comp.html
+++ b/public/app/Components/_top_bar/top_bar.comp.html
@@ -7,7 +7,7 @@
       <i class="fa fa-arrow-left" aria-hidden="true"></i>
       뒤로
     </a>
-    <a *ngIf="menu_set == 'btn_home'" (click)="goHome()">
+    <a *ngIf="menu_set == 'btn_home'" (click)="goBack()">
       <i class="fa fa-arrow-left" aria-hidden="true"></i>
       홈으로</a>
 
