--- a/public/app/Styles/0_app.css
+++ b/public/app/Styles/0_app.css
@@ -34,7 +34,12 @@ a {
 
 #bottom_bar {
   height: 52px;
-  background-color: tomato; }
+  background-color: #efefef;
+  border-top: 1px solid #cdcdcd;
+  box-sizing: border-box;
+  color: #555555; }
+  #bottom_bar:active {
+    background-color: white; }
 
 #outer_space {
   position: relative;
