--- a/public/app/Styles/3_delivery.css
+++ b/public/app/Styles/3_delivery.css
@@ -34,7 +34,12 @@ a {
 
 #bottom_bar {
   height: 52px;
-  background-color: tomato; }
+  background-color: #efefef;
+  border-top: 1px solid #cdcdcd;
+  box-sizing: border-box;
+  color: #555555; }
+  #bottom_bar:active {
+    background-color: white; }
 
 .delivery_item {
   padding: 0px 16px 0px 16px;
@@ -68,9 +73,10 @@ a {
   width: 100%;
   height: 52px;
   line-height: 54px;
-  color: white;
   text-align: center;
   font-size: 1.2em; }
+  #call_btn > i {
+    opacity: 0.5; }
 
 #leaflet {
   width: 100%;
