--- a/public/app/Styles/3_delivery.scss
+++ b/public/app/Styles/3_delivery.scss
@@ -40,9 +40,11 @@
   width: 100%;
   height: 52px;
   line-height: 54px;
-  color: white;
   text-align: center;
   font-size: 1.2em;
+  & > i {
+    opacity: 0.5;
+  }
 }
 
 #leaflet {
