--- a/public/app/Styles/common.scss
+++ b/public/app/Styles/common.scss
@@ -52,5 +52,11 @@ a {
 
 #bottom_bar {
   height: 52px;
-  background-color: $sikija_color;
+  background-color: #efefef;
+  border-top: 1px solid #cdcdcd;
+  box-sizing: border-box;
+  color: #555555;
+  &:active {
+    background-color: white;
+  }
 }
