--- a/public/app/Styles/3_delivery.scss
+++ b/public/app/Styles/3_delivery.scss
@@ -1,14 +1,21 @@
 @import "common";
 
 .delivery_item {
-  padding: 0px 16px 0px 16px;
-  height: 52px;
+  padding: 20px 16px 18px 16px;
   border-bottom: 1px solid $light_line_color;
+  &.tall {
+    padding-top: 14px;
+    padding-bottom: 12px;
+  }
   &:active {
     background-color: #efefef;
   }
-  & > span {
-    line-height: 54px;
+  & .delivery_name {
+  }
+  & .delivery_desc {
+    margin-top: 2px;
+    color: #aaaaaa;
+    font-size: 0.9em;
   }
 }
 
