Working on restaurant

--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -10,7 +10,7 @@
           <span>배달음식</span>
         </div>
       </div>
-      <div id="to_restaurant">
+      <div id="to_restaurant" (click)="toRestaurant()">
         <div>
           <img src="app/Images/Interface/to_restaurant.png">
           <h1>나가자!</h1>
