--- a/public/app/Styles/3_delivery.css
+++ b/public/app/Styles/3_delivery.css
@@ -18,6 +18,9 @@ a {
 ._light_gray_bg {
   background-color: #efefef; }
 
+._gray_bg {
+  background-color: #bfbfbf; }
+
 #sub_menu_bar {
   width: 100%;
   height: 44px;
@@ -54,7 +57,7 @@ a {
     color: #aaaaaa;
     font-size: 0.9em; }
 
-#loading_more {
+.loading_more {
   color: tomato;
   background-color: white;
   text-align: center;
