--- a/public/app/Components/3_delivery/delivery_view.comp.html
+++ b/public/app/Components/3_delivery/delivery_view.comp.html
@@ -1,6 +1,8 @@
 <topBar [locationId]="locationId" [menu_set]="top_bar_menu_set"></topBar>
-<div id="scroll_area" class="both _gray_bg">
-  <!--<div id="leaflet" *ngIf="delivery" [ngStyle]="{'background-image': 'url(\'' + delivery.leaflet + '\')'}"></div>-->
+<div id="scroll_area" class="both _dark_gray_bg">
+  <div *ngIf="!delivery" id="leaflet_loading">
+    <i class="fa fa-circle-o-notch fa-spin fa-2x fa-fw"></i>
+  </div>
   <div id="leaflet" *ngIf="delivery" [attr.data-bgsrc]="delivery.leaflet"></div>
 </div>
 <div id="bottom_bar" class="_float_con">
