--- a/public/app/Styles/3_delivery.css
+++ b/public/app/Styles/3_delivery.css
@@ -21,6 +21,9 @@ a {
 ._gray_bg {
   background-color: #bfbfbf; }
 
+._dark_gray_bg {
+  background-color: #808080; }
+
 #sub_menu_bar {
   width: 100%;
   height: 44px;
@@ -34,6 +37,12 @@ a {
     overflow-x: scroll; }
   #scroll_area.both {
     overflow: scroll; }
+
+.loading_more {
+  color: tomato;
+  background-color: white;
+  text-align: center;
+  padding: 20px; }
 
 #bottom_bar {
   height: 52px;
@@ -56,12 +65,6 @@ a {
     margin-top: 2px;
     color: #aaaaaa;
     font-size: 0.9em; }
-
-.loading_more {
-  color: tomato;
-  background-color: white;
-  text-align: center;
-  padding: 20px; }
 
 #sub_menu_bar {
   padding-left: 8px; }
@@ -88,5 +91,10 @@ a {
 #leaflet {
   width: 100%;
   height: 100%; }
+
+#leaflet_loading {
+  text-align: center;
+  color: white;
+  padding-top: 20px; }
 
 /*# sourceMappingURL=3_delivery.css.map */
