--- a/public/app/Styles/3_delivery.scss
+++ b/public/app/Styles/3_delivery.scss
@@ -19,13 +19,6 @@
   }
 }
 
-.loading_more {
-  color: $sikija_color;
-  background-color: white;
-  text-align: center;
-  padding: 20px;
-}
-
 #sub_menu_bar {
   padding-left: 8px;
   &:after {
@@ -57,4 +50,10 @@
 #leaflet {
   width: 100%;
   height: 100%;
+}
+
+#leaflet_loading {
+  text-align: center;
+  color: white;
+  padding-top: 20px;
 }
