--- a/public/app/Styles/3_delivery.css
+++ b/public/app/Styles/3_delivery.css
@@ -12,6 +12,8 @@ a {
   overflow: hidden; }
   ._float_con > * {
     float: left; }
+  ._float_con > ._f_right {
+    float: right; }
   ._float_con:after {
     clear: both; }
 
