--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -5,14 +5,14 @@
     <div id="delivery_or_restaurant" class="_float_con">
       <div id="to_delivery" (click)="toDelivery()">
         <div>
-          <img src="app/Images/Interface/to_delivery.png">
+          <img src="/app/Images/Interface/to_delivery.png">
           <h1>시키자!</h1>
           <span>배달음식</span>
         </div>
       </div>
       <div id="to_restaurant" (click)="toRestaurant()">
         <div>
-          <img src="app/Images/Interface/to_restaurant.png">
+          <img src="/app/Images/Interface/to_restaurant.png">
           <h1>나가자!</h1>
           <span>맛집탐방</span>
         </div>
@@ -20,6 +20,11 @@
     </div>
 
     <div id="to_inform"></div>
+
+    <div id="create_icon" (click)="createIcon()">
+      <i class="fa fa-lg fa-mobile" aria-hidden="true"></i>
+      홈 화면에 아이콘 추가
+    </div>
 
   </div>
 </div>
