--- a/public/app/Styles/2_dashboard.scss
+++ b/public/app/Styles/2_dashboard.scss
@@ -55,3 +55,12 @@
   height: 80px;
   border: 1px solid $light_gray_bg_border;
 }
+
+#create_icon {
+  background-color: $sikija_color;
+  height: 52px;
+  line-height: 52px;
+  text-align: center;
+  font-size: 1.2em;
+  color: white;
+}
