--- a/public/app/Components/4_restaurant/restaurant.comp.html
+++ b/public/app/Components/4_restaurant/restaurant.comp.html
@@ -1,16 +1,16 @@
 <topBar [locationId]="locationId" [menu_set]="top_bar_menu_set"></topBar>
 <div id="sub_menu_bar" class="_float_con">
   <div>
-    <select>
+    <select id="dong_select" (change)="selectDong()">
       <option value="all">모든 동네 </option>
-      <option *ngFor="let key of dongs" value="dongKey">{{dictionary.dongKor(key)}}</option>
+      <option *ngFor="let key of dongs" value="{{key}}">{{dictionary.dongKor(key)}}</option>
     </select>
     <i class="fa fa-chevron-down" aria-hidden="true"></i>
   </div>
   <div>
-    <select>
+    <select id="category_select" (change)="selectCategory()">
       <option value="all">모든 음식 </option>
-      <option *ngFor="let key of resCategories" value="dongKey">{{dictionary.resCatKor(key)}}</option>
+      <option *ngFor="let key of resCategories" value="{{key}}">{{dictionary.resCatKor(key)}}</option>
     </select>
     <i class="fa fa-chevron-down" aria-hidden="true"></i>
   </div>
