--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -22,8 +22,20 @@
     <div id="to_inform"></div>
 
     <div id="create_icon" (click)="createIcon()">
-      <i class="fa fa-lg fa-mobile" aria-hidden="true"></i>
-      홈 화면에 아이콘 추가
+      <div>
+        <i class="fa fa-lg fa-mobile" aria-hidden="true"></i>
+        홈 화면에 아이콘 추가
+      </div>
+      <div>
+        <h1>안드로이드: 인터넷 앱 또는 크롬에서</h1>
+        화면 우측 상단의<img src="/app/Images/Interface/c_i_android.png">버튼을 누르고 <span>홈 화면에 추가</span>를 누르세요.
+
+        <h1>안드로이드: 네이버 앱에서</h1>
+        화면 우측 하단의 <img src="/app/Images/Interface/c_i_naver.png">버튼을 누르고 <span>홈 화면 추가</span>를 누르세요.
+
+        <h1>아이폰에서</h1>
+        <span>사파리</span>에서 접속(시키자.com) 후 화면 하단 중앙의 <img src="/app/Images/Interface/c_i_iphone.png"> 버튼을 누른 뒤 <span>홈 화면에 추가</span>를 누르세요.
+      </div>
     </div>
 
   </div>
