--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -22,7 +22,7 @@
     <div id="to_inform"></div>
 
     <div id="create_icon" (click)="createIcon()">
-      <div>
+      <div (click)="createIconToggle()">
         <i class="fa fa-lg fa-mobile" aria-hidden="true"></i>
         홈 화면에 아이콘 추가
       </div>
