--- a/public/app/Styles/2_dashboard.css
+++ b/public/app/Styles/2_dashboard.css
@@ -104,6 +104,7 @@ a {
   font-size: 1.2em;
   color: white; }
 #create_icon > div:last-child {
+  display: none;
   background-color: white;
   padding: 20px;
   line-height: 24px; }
