Dashboard - create icon

--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -35,6 +35,12 @@
 
         <h1>아이폰에서</h1>
         <span>사파리</span>에서 접속(시키자.com) 후 화면 하단 중앙의 <img src="/app/Images/Interface/c_i_iphone.png"> 버튼을 누른 뒤 <span>홈 화면에 추가</span>를 누르세요.
+
+        <div>
+          <span (click)="createIconToggle()">
+            <i class="fa fa-times" aria-hidden="true"></i> 닫기
+          </span>
+        </div>
       </div>
     </div>
 
