--- a/public/app/Styles/2_dashboard.scss
+++ b/public/app/Styles/2_dashboard.scss
@@ -68,7 +68,7 @@
   & > div:last-child {
     display: none;
     background-color: white;
-    padding: 20px;
+    padding: 16px 16px 0 16px;
     line-height: 24px;
     & > h1 {
       font-size: 1.1em;
@@ -86,6 +86,16 @@
       vertical-align: bottom;
       width: 24px;
       height: 24px;
+    }
+    & > div {
+      height: 44px;
+      line-height: 44px;
+      text-align: right;
+      margin-top: 12px;
+      border-top: 1px solid #efefef;
+      & i {
+        color: #808080;
+      }
     }
   }
 }
