Dashboard - building-chat notice

--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -19,7 +19,14 @@
       </div>
     </div>
 
-    <div id="to_inform"></div>
+    <table id="building_chat">
+      <tr>
+        <td>
+          <img src="/app/Images/Interface/building_chat.png">
+        </td>
+        <td>배달업체 평가, 리뷰 기능이 준비중입니다.  조금만 기다려 주세요 ^^</td>
+      </tr>
+    </table>
 
     <div id="create_icon" (click)="createIcon()">
       <div (click)="createIconToggle()">
