--- a/public/app/Components/_top_bar/top_bar.comp.html
+++ b/public/app/Components/_top_bar/top_bar.comp.html
@@ -1,7 +1,7 @@
 <div id="top_bar" class="_pos_rel">
   <nav>
     <a *ngIf="menu_set == 'select_location'">장소를 선택하세요.</a>
-    <a *ngIf="menu_set == 'dashboard' && locationObj">[{{regionName}}] {{locationObj.name}}</a>
+    <a *ngIf="menu_set == 'dashboard' && locationObj">{{regionName}} {{locationObj.name}} <i class="fa fa-refresh" aria-hidden="true"></i></a>
 
     <a *ngIf="menu_set == 'btn_back'" (click)="goBack()">
       <i class="fa fa-arrow-left" aria-hidden="true"></i>
