Dashboard - building-chat notice

--- a/public/app/Styles/2_dashboard.scss
+++ b/public/app/Styles/2_dashboard.scss
@@ -52,7 +52,7 @@
 
 #building_chat {
   background-color: white;
-  border: 1px solid #e6e6e6;
+  //border: 1px solid #e6e6e6;
   color: #555555;
   & img {
     width: 80px;
